--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,21 @@ set(CMAKE_CXX_STANDARD 14)
 
 # FFmpeg的安装目录，可以通过命令"brew info ffmpeg"获取
 set(FFMPEG_DIR /opt/homebrew/Cellar/ffmpeg/5.0.1)
+
+aux_source_directory(. DIR_SRCS)
+
 # 头文件搜索路径
-include_directories(${FFMPEG_DIR}/include/)
+include_directories(${FFMPEG_DIR}/include/
+        ${PROJECT_SOURCE_DIR}/muxer)
+add_subdirectory(muxer)
 # 动态链接库或静态链接库的搜索路径
 link_directories(${FFMPEG_DIR}/lib/)
 
-add_executable(FFMpegPro main.cpp MediaDeMuxerCore.cpp MediaDeMuxerCore.h VideoDecoder.cpp VideoDecoder.h AudioDecoder.cpp AudioDecoder.h VideoEncoder.cpp VideoEncoder.h AudioEncoder.cpp AudioEncoder.h AudioResample.cpp Mp3ToAAC.cpp)
+add_executable(FFMpegPro ${DIR_SRCS})
 
 #链接库
 target_link_libraries(FFMpegPro
+        muxer
         #FFmpeg 库
         avcodec
         avfilter
@@ -25,3 +31,6 @@ target_link_libraries(FFMpegPro
 
 #CMake官方教程中文翻译
 #https://blog.csdn.net/weixin_39408343/article/details/102951335
+
+#认识Make、Makefile、CMake和CMakeLists
+#https://juejin.cn/post/6854573222017368078
